New article : Writing better BDD scenario

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://cotonne.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 comments: true
-twitter_username: cotonne
+twitter_username: yoda044
 github_username:  cotonne
 
 # Build settings
@@ -29,6 +29,7 @@ markdown: kramdown
 theme: minima
 gems:
   - jekyll-feed
+  - jekyll-twitter-plugin
 exclude:
   - Gemfile
   - Gemfile.lock
