--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Cotonne does Craft!
 email: cotonne@github.com
 description: > # this means to ignore newlines until "baseurl:"
-  This blog is about crafting softwares, thoughts about Agility,
+  This blog is about crafting software, thoughts about Agility,
   management and organization, technical challenges and a lot more!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://cotonne.github.io" # the base hostname & protocol for your site, e.g. http://example.com
